--- a/src/CtrlMoney.Infra.Context/CtrlMoney.Infra.Context.csproj
+++ b/src/CtrlMoney.Infra.Context/CtrlMoney.Infra.Context.csproj
@@ -7,11 +7,22 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CtrlMoney.Domain\CtrlMoney.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapping\0 - Aggregation\" />
+    <Folder Include="Mapping\1 - SubEntities\" />
+    <Folder Include="Mapping\2 - ValueObjects\" />
+    <Folder Include="Mapping\A - Registration\" />
   </ItemGroup>
 
 </Project>
