--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,9 @@ version: '3'
 services:
   ctrlmoney-postgres:
     image: postgres
+    container_name: "ctrlmoney-postgres"
     environment:
+      POSTGRES_DB: "ctrlmoneyDB"
       POSTGRES_PASSWORD: "Postgres2019!"
     ports:
       - "15432:5432"
@@ -12,6 +14,7 @@ services:
       
   ctrlmoney-pgadmin:
     image: dpage/pgadmin4
+    container_name: "ctrlmoney-pgadmin"
     environment:
       PGADMIN_DEFAULT_EMAIL: "juliano.pestili@outlook.com"
       PGADMIN_DEFAULT_PASSWORD: "PgAdmin2019!"
