Import Positions sheet

--- a/src/CtrlMoney.UI.Web/Properties/launchSettings.json
+++ b/src/CtrlMoney.UI.Web/Properties/launchSettings.json
@@ -14,8 +14,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "ancmHostingModel": "OutOfProcess",
-      "use64Bit": true
+      "use64Bit": true,
+      "ancmHostingModel": "OutOfProcess"
     },
     "CtrlMoney.UI.Web": {
       "commandName": "Project",
@@ -24,6 +24,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
