--- a/devops/docker-compose.yaml
+++ b/devops/docker-compose.yaml
@@ -3,16 +3,37 @@ version: '3'
 services:
   ctrl-money-app:
     image: ctrl-money:latest
+    container_name: "ctrl-money-app"    
     build:
       context: ../
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"      
+      - "8000:80"
+    links:
+      - postgres-db-dev
+    depends_on:
+      postgres-db-dev:
+        condition: service_healthy   
     environment:
        - DOTNET_ENVIRONMENT=Development
        - PORT=8000
+       #- ConnectionStrings__DefaultConnection="Username=postgres;Password='Pa$$W0rd-17';Host=172.31.179.64;Port=15432;Database=ctrlmoney-db-dev;"
+       - ConnectionStrings__DefaultConnection=User ID =postgres;Password=${DATABASE_DEFAULT_PASSWORD};Server=postgres-db-dev;Port=5432;Database=ctrlmoney-db-dev;Integrated Security=true;Pooling=true;
     networks:
-      - ctrl-money-stg-net
+      - my-network
+  postgres-db-dev:
+    image: postgres:latest
+    restart: always
+    container_name: "ctrlmoney-db-dev"
+    ports:
+      - "15432:5432"
+    environment:
+      POSTGRES_DB: "ctrlmoney-db-dev"
+      POSTGRES_PASSWORD: "${DATABASE_DEFAULT_PASSWORD}"
+    healthcheck:
+      test: "pg_isready -q -U postgres"
+    networks:
+      - my-network
 networks:
-  ctrl-money-stg-net:
+  my-network:
     external: true
