Apply changes for Details IncomeTax

--- a/src/CtrlMoney.UI.Web/CtrlMoney.UI.Web.csproj
+++ b/src/CtrlMoney.UI.Web/CtrlMoney.UI.Web.csproj
@@ -28,6 +28,10 @@
     <ProjectReference Include="..\CtrlMoney.Infra.Context\CtrlMoney.Infra.Context.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\" />
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptTarget>ES5</TypeScriptTarget>
     <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
