Changes for IRRF 2023-2022

--- a/devops/docker-compose.stg.yaml
+++ b/devops/docker-compose.stg.yaml
@@ -11,6 +11,8 @@ services:
     networks:
       - ctrlmoney-network
   ctrlmoney-db:
+    ports:
+      - "15433:5432"  
     networks:
       - ctrlmoney-network    
 networks:
