--- a/devops/docker-compose.dev.yaml
+++ b/devops/docker-compose.dev.yaml
@@ -5,12 +5,14 @@ services:
     ports:
       - "8002:80" 
     environment:
-       - DOTNET_ENVIRONMENT=Development
+       - ASPNETCORE_ENVIRONMENT=Development
        - PORT=8002
        - ConnectionStrings__DefaultConnection=User ID =postgres;Password=${DATABASE_DEFAULT_PASSWORD};Server=ctrlmoney-db;Port=5432;Database=ctrlmoney-db-${ENVIRONMENT};Integrated Security=true;Pooling=true;
     networks:
       - ctrlmoney-network
   ctrlmoney-db:
+    ports:
+      - "15432:5432"  
     networks:
       - ctrlmoney-network
 networks:
