--- a/src/CtrlMoney.WorkSheet.Service/CtrlMoney.WorkSheet.Service.csproj
+++ b/src/CtrlMoney.WorkSheet.Service/CtrlMoney.WorkSheet.Service.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.96.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
