Connect stock with YFinance API project and calculate DY and YoC
Get current price

--- a/devops/docker-compose.dev.yaml
+++ b/devops/docker-compose.dev.yaml
@@ -7,6 +7,7 @@ services:
     environment:
        - ASPNETCORE_ENVIRONMENT=Development
        - PORT=8002
+       - YFinanceHost__Url=${YFinanceHost_URL}
        - ConnectionStrings__DefaultConnection=User ID =postgres;Password=${DATABASE_DEFAULT_PASSWORD};Server=ctrlmoney-db;Port=5432;Database=ctrlmoney-db-${ENVIRONMENT};Integrated Security=true;Pooling=true;
     networks:
       - ctrlmoney-network
