--- a/src/CtrlMoney.UI.Web/appsettings.json
+++ b/src/CtrlMoney.UI.Web/appsettings.json
@@ -8,7 +8,10 @@
   },
   "ConnectionStrings": {
     "SQLConnection": "server=127.0.0.1,14333; database=CtrlBox;Trusted_Connection=False;User Id=sa;Password=YourStrong!Passw0rd;MultipleActiveResultSets=True;",
-    "DefaultConnection": "User ID =postgres;Password=eHUt=h93@Eqeza-KJ$TbzQ;Server=172.30.251.26;Port=15434;Database=ctrl-money-db;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "User ID =postgres;Password=teste0195;Server=localhost;Port=15432;Database=ctrlmoney-db-dev;Integrated Security=true;Pooling=true;"
+  },
+  "YFinanceHost": {
+    "Url": "http://172.17.0.1:5001"
   },
   "AllowedHosts": "*"
 }
