Update with graphics

--- a/src/CtrlMoney.Domain/CtrlMoney.Domain.csproj
+++ b/src/CtrlMoney.Domain/CtrlMoney.Domain.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CtrlMoney.CrossCutting\CtrlMoney.CrossCutting.csproj" />
+    <ProjectReference Include="..\CtrlMoney.DataTransfer\CtrlMoney.DataTransfer.csproj" />
   </ItemGroup>
 
 </Project>
