--- a/src/CtrlMoney.AppService/CtrlMoney.AppService.csproj
+++ b/src/CtrlMoney.AppService/CtrlMoney.AppService.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CtrlMoney.Domain\CtrlMoney.Domain.csproj" />
   </ItemGroup>
 
